# Sys_Rev_Tec

./: .coverage  .dockerignore  .env  .env.ai.example  .env.docker  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  Dockerfile.prod  FAQ.md  Makefile  Phase2_智能分析引擎计划_2025-07-28.md  README.md  README_Docker.md  TODO.md  ai_service_test_report.json  alembic.ini  analyze_db_performance.py  api_optimization_report.json  api_performance_optimizer.py  auto_fix_all.py  bandit-report.json  cache_upgrade_test.py  cache_upgrade_test_report.json  check_db.py  check_db_documents.py  check_db_structure.py  check_db_tables.py  check_documents.py  check_projects_router.py  check_security_coverage.py  check_test_db.py  check_users.py  code_quality_report.md  create_tables.py  database_optimization_report.json  (+96 more)
.github/workflows/: ci.yml
.vercel/: project.json
ai_service/: .env.example  Dockerfile  README.md  __init__.py  config.py  database.py  docker-compose.yml  main.py  reports.py  requirements.txt  search.py  start_ai_service.py  vectorization.py
ai_service/api/: __init__.py  health.py  reports.py  search.py  vectorization.py
ai_service/utils/: __init__.py  cache.py  logging.py  text_processing.py
alembic/: env.py
alembic/versions/: 002_add_permission_security_tables.py  003_add_ocr_fields.py  17a7edcac291_initial_migration.py  1e936bea7a27_create_comprehensive_review_system_.py  26769560901e_initial_migration.py  add_vector_tables.py  af0354f58298_add_primary_role_id_column_only.py  c9dd43f50a60_merge_heads.py  dc5bca58112f_add_oauth2_client_and_authorization_.py  remove_permissions_system.py
analysis_service/: __init__.py  main.py
analysis_service/anomaly_detection/: __init__.py  anomaly_detector.py  anomaly_models.py
analysis_service/compliance_check/: __init__.py  compliance_engine.py  compliance_models.py  compliance_rules.py
analysis_service/intelligent_reporting/: __init__.py  report_generator.py  report_models.py
analysis_service/risk_assessment/: __init__.py  risk_analyzer.py  risk_models.py  risk_scorer.py
app/: initial_data.py  initial_review_data.py  main.py
app/api/: deps.py
app/config/: __init__.py  cache_strategy.py  performance_config.py
app/core/: ai_config.py  ai_deps.py  auth.py  cache_config.py  cache_config_manager.py  cache_health_check.py  cache_monitor.py  cache_optimizer.py  cache_scheduler.py  cache_warmup.py  config.py  error_tracking.py  exceptions.py  logger.py  logging.py  logging_config.py  monitoring.py  oauth2.py  permission_batch_checker.py  permission_cache.py  permission_config_manager.py  permission_performance_monitor.py  permission_preloader.py  permission_query_optimizer.py  permissions.py  security.py  system_maintenance.py
app/crud/: __init__.py  base.py  crud_audit_log.py  crud_document.py  crud_oauth2_client.py  crud_ocr.py  crud_permission.py  crud_project.py  crud_security_event.py  crud_token_blacklist.py  crud_user.py  crud_vector.py
app/db/: base.py  base_class.py  database_optimization.py  init_data.py  optimize_db.py  permission_indexes.py  session.py
app/middleware/: __init__.py  auth.py  enhanced_monitoring.py  error_tracking.py  monitoring.py  rate_limit.py  request_id.py  security.py
app/models/: __init__.py  associations.py  audit_log.py  base.py  document.py  oauth2_client.py  ocr.py  permission.py  project.py  review_stage.py  security_event.py  token_blacklist.py  user.py  vector.py
app/monitoring/: __init__.py  performance_monitor.py
app/schemas/: __init__.py  ai.py  document.py  oauth2.py  ocr.py  permission.py  project.py  response.py  security_monitor.py  token_blacklist.py  user.py  vector.py
app/scripts/: init_test_users.py
app/services/: cache_init.py  cache_manager.py  cache_monitor.py  cache_optimizer.py  cache_service.py  cache_strategies.py  cache_warmup.py  document_service.py  multi_level_cache.py  ocr_service.py  performance_metrics.py  security_service.py
app/tasks/: __init__.py  cache_optimization.py
app/utils/: __init__.py  ai_integration.py  cache.py  (+4 more)
config/: nginx.prod.conf
docs/: AI_INTEGRATION_RESEARCH.md  AI_PERFORMANCE_METRICS.md  AI_SERVICE_ARCHITECTURE.md  API.md  ARCHITECTURE.md  DEPLOYMENT.md  INTELLIGENT_SEARCH_API.md  SECURITY.md  TESTING.md  TESTING_COMPLETE.md  USER_GUIDE.md  VECTOR_DATABASE_INTEGRATION.md  cache_system_usage.md  permission_optimization_usage.md
frontend/: app.js  index.html  login.html  package-lock.json  package.json  performance-dashboard.html  simple.html  styles.css  test-simple.html  vite.config.js  vite.config.ts  vite.config.ts.backup
frontend_backup/: index.html  package.json  styles.css  vite.config.ts
migrations/: add_auth_fields.py
monitoring/: alert_rules.yml  prometheus.yml
scripts/: backup_restore.py  deploy_production.py  docker_deploy.py  fix_code_quality.py  init_production_db.py  migrate_to_postgresql.py  migrate_to_production.py  production_setup.py  quality_check.py  test_batch_upload.py  verify_ai_infrastructure.py
static/: api-test.html  index.html
tests/: conftest.py  conftest_ai.py  test_ai_service.py  test_api.py  test_api_endpoints_coverage.py  test_auth.py  test_cache_api.py  test_cache_decorator.py  test_cache_decorator_additional.py  test_cache_decorator_edge_cases.py  test_cache_decorator_missing_coverage.py  test_cache_service.py  test_cache_system.py  test_cache_system_simple.py  test_crud_base.py  test_crud_document.py  test_crud_document_coverage.py  test_crud_ocr.py  test_crud_project.py  test_crud_project_coverage.py  test_crud_user_coverage.py  test_document_search.py  test_document_service.py  test_document_service_additional.py  test_documents.py  test_documents_edge_cases.py  test_e2e.py  test_error_tracking.py  test_exceptions.py  test_health.py  test_initial_data.py  test_initial_data_main.py  test_initial_review_data.py  test_initial_review_data_additional.py  test_integration.py  test_main.py  test_middleware_rate_limit.py  test_middleware_rate_limit_additional.py  test_middleware_security.py  test_monitoring.py  (+6 more)
(+193 files in other folders)
